--- a/Map.css
+++ b/Map.css
@@ -1,3 +1,8 @@
+#airport-container {
+    width: 100%;
+    height: 600px;
+}
+
 #airport-settings {
     width: calc(100% - 8px);
     border: 2px solid black;
@@ -15,7 +20,7 @@
 #airport-settings #setting-value {
     width: calc(100% - 128px);
     margin-left: 128px;
-    min-widtH: 240px;
+    min-width: 240px;
     text-align: left;
 }
 
@@ -26,10 +31,21 @@
 #airport-map{
     width: 800px;
     height: 600px;
+    float: left;
 }
 
 #airport-data {
-    margin: 12px;
+    width: calc(100% - 820px);
+    padding-right: 12px;
+    float: right;
+}
+
+#airport-data p {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 #exercise-toggle {
