New features: +Added info window on marker click.  Info window contains remove link which will remove marker.  Only one infowindow instance will open at a time, and deleting markers will close the infowindow. +Added horizontal scroll of airport data.  Clicking on the "X" will remove an airport's block, as well as its marker.  Clicking the remove link on an infowindow will also remove an airport from the horizontal scroll.
Updates:
+Added missing fields to table display
+When users add markers, the map will pan or zoom as appropriate to make sure the new marker is in view.
+Converted the MapFcns object literal into a module-patterned object called "AirportMap" which contains the globalMap and a few other variables that need to be maintained between function calls.  This keeps the global "namespace" cleaner.

Fixes:
+Made new IDs for the child divs inside setting-value div (The "setting-name" ID was being reused, which was the primary problem.  The rest was preference.)
+Selecting the same airport twice will no longer create duplicate markers.
+Added sort routine which will sort the airport list by code.  This is done using localeCompare which is admittedly unnecessary when there are no non-English characters involved, but it's still a good habit if you ever support anything international.
+Moved code that did not need to wait for the document ready event outside of the document ready function.  (Basically, the entire airportMap object.)

Trivial:
+Changed &quot; to &apos; where appropriate

Additional Suggestions:
+I developed this without any particular attention to older browser support (pre-IE9.)  That may or may not be a problem depending on the target users, something you would want to figure out before starting development, normally.
+There's still a case to be made for putting scripts at the bottom (before the '</body>' tag) for efficiency reasons.  Async and defer are a nice alternative, but the lack of guarantees about order of execution on Async can make it

--- a/Map.css
+++ b/Map.css
@@ -15,7 +15,7 @@
 #airport-settings #setting-value {
     width: calc(100% - 128px);
     margin-left: 128px;
-    min-widtH: 240px;
+    min-width: 240px;
     text-align: left;
 }
 
@@ -41,4 +41,73 @@
     vertical-align: text-bottom;
     font-size: 32px;
     font-weight: bold;
+}
+
+#remove-marker-link {
+	text-decoration: none;
+}
+
+#airport-list {
+	white-space: nowrap;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	padding: 0px;
+	margin-left: 12px;
+	padding-bottom: 12px;
+}
+
+#airport-list > li {
+	display: inline-block;
+	height: 100px;
+	border: 2px solid black;
+	padding-bottom: 10px;
+	margin-right: 10px;
+}
+
+#airport-list > li div
+{
+	padding: 0px 10px 0px 10px;
+}
+
+#airport-list > li > div.airport-list-titlebar  {
+	padding: 0px;
+	margin: 0px 0px 5px 0px;
+	width: 100%;
+}
+
+#airport-list > li > div.airport-list-titlebar > div.letter-code {
+	display: inline-block;
+	padding: 5px 10px 5px 10px;
+	font-weight: bold;
+	float: left;
+}
+
+#airport-list > li > div.airport-list-titlebar > div.remove-button {
+	background-color: black;
+	color: white;
+	display: inline-block;
+	padding: 5px 10px 5px 10px;
+	font-weight: bold;
+	float: right;
+	/* Disables text cursor, as well as highlighting of text in all major browsers */
+	cursor: default;
+	-moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+}
+
+#airport-list > li > div.airport-list-titlebar > div.remove-button:hover {
+	background-color: #333333;
+}
+
+#airport-list > li > div.airport-list-titlebar > div.remove-button:active {
+	background-color: #808080;
+}
+
+#airport-list > li > div.airport-list-titlebar > div.airport-code {
+	width: 50px;
+	margin: 0 auto;
+	display: inline-block;
+	padding: 5px 10px 5px 10px;
 }
