--- a/Map.css
+++ b/Map.css
@@ -3,50 +3,11 @@ html {
     font-family: Arial;
 }
 
-#airport-settings {
-    width: calc(100% - 8px);
-    border: 2px solid black;
-    height: 128px;
-    padding: 4px;
-    margin: 10px 14px 10px 0px;
-}
-
-    #airport-settings #setting-name {
-        width: 128px;
-        float: left;
-        border-right: 1px solid black;
-    }
-
-    #airport-settings #setting-value {
-        width: calc(100% - 128px);
-        margin-left: 128px;
-        min-width: 240px;
-        text-align: left;
-    }
-
-        #airport-settings #setting-value div {
-            margin-left: 14px;
-        }
-
 #airport-map {
-    width: 800px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
 }
 
-#airport-data {
-    margin: 12px;
-}
-
-#exercise-toggle {
-    cursor: pointer;
-}
-
-#instruction-toggle {
-    line-height: 44px;
-    vertical-align: text-bottom;
-    font-size: 2rem;
-    font-weight: bold;
-}
 
 .sub-list-city {
     display: none;
@@ -60,25 +21,96 @@ p {
     font-size: 1.5rem;
 }
 
-.airportList-new {
-    height: 150px;
-    width: 300px;
-    overflow-y: scroll;
+.finderComponent{
+    height: 500px;
+    width: 1000px;
+    overflow-y: hidden;
     padding: 10px;
     border: 3px solid black;
     position:relative;
 }
 
-.reset_btn{
-    position:absolute;
-    top:20px;
-    right:22px;
-    width:50px;
+.display-as-table{
+    display:table;
+}
+
+.display-as-table-cell{
+    display:table-cell;
+    vertical-align:middle;
+}
+
+
+
+.section{
+    width:33%;
+    border-right:1px solid black;
+    height:90%;
+    display:inline-block;
+    background-color:aliceblue;
+    overflow-x:hidden;
+    margin-bottom:10px;
+
+}
+
+.section-1{
+        overflow-y:scroll;
+}
+
+.section .header{
+    background-color:darkslategray;
+    height:50px;
+    border-bottom:3px solid green;
+    width:100%;
+    font-size:2rem;
+    line-height:2rem;
+    color:white;
+}
+
+.section .header .text{
+    position:relative;
+    left:10px;
+}
+
+.states.section:last-child{
+    border-right:none;
+}
+
+.btn{
+    width:auto;
     border:1px solid black;
     height:auto;
-    padding:5px;
+    padding:5px 10px;
     cursor:pointer;
     user-select:none;
+    text-align:center;
+}
+
+
+.my-airports_btn{
+    position:absolute;
+    top:20px;
+    right:12px;
+    background-color:green;
+    color:#fff;
+    font-weight:bold;
+}
+
+.airport-finder_btn{
+    position:absolute;
+    top:20px;
+    right:110px;
+    background-color:blue;
+    color:#fff;
+    font-weight:bold;
+}
+
+
+.remove-airport_btn{
+    width:50px;
+    right:150px;
+    background-color:red;
+    color:#fff;
+    font-weight:bold;
 }
 
 .airport-List-new {
@@ -89,43 +121,71 @@ p {
     list-style-type: none;
 }
 
-.state-item {
-    font-size: 2rem;
-    padding: 10px;
-    text-align: center;
-    background-color: #c2c2c2;
-    transition: all 0.3s ease;
+.list{
+    margin-top:10px;
 }
 
-    .state-item:hover {
+.item {
+    font-size: 1.25rem;
+    background-color: #c2c2c2;
+    transition: all 0.8s ease;
+    height:50px;
+    margin:5px;
+    display:table;
+    width:100%;
+    text-align:center;
+    cursor: pointer;
+}
+
+    .item:hover {
         background-color: #808080;
     }
 
-    .state-item a {
+    .item div {
+        display:table-cell;
+        vertical-align:middle;
         color: black;
         text-decoration: none;
         transition: all 0.3s ease;
     }
 
-        .state-item a:hover {
+        .item div:hover {
             color: white;
             text-shadow: 0 0 10px blue;
         }
 
-ul.sub-list-city {
-    background-color: #808080;
-    font-size: 1.75rem;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    border: none;
-    transition: all 0.3s ease;
+.list{
+    width:90%;
+    margin:0 auto;
 }
 
-.sub-list-code{
-    font-size:1.25rem;
-    list-style-type:none;
-    padding:0;
-    margin:0;
+.city-item, .code-item{
+    display:none;
+}
 
+.airport-container{
+    display:initial;
+}
+
+.my-airports-container{
+    height:500px
+}
+
+.my-airports.section{
+    display:inline-block;
+    overflow:hidden;
+    height:89%;
+
+}
+
+.my-airports.section-2{
+    width:50%;
+    width: 62%;
+    margin-left: 3%;
+    border-left:none;
+    
+}
+
+.instructions li{
+    font-size:2rem;
 }
