MAP DEMO - Commit
CHANGES
1.  Wired up remaining data fields to the details panel
2.  Centered map upon selection of new marker
3.  Overlay detail panel over bottom of map to save some real estate
4.  Sorting of airport codes
5.  Stubbed out 'alternate code' search: see notes on next steps
6.  Added ability to hide markers;

INTERESTING NOTES
1.  How best to search for alternative airports could use some refining
based on user expectations.  Airport codes, City, even more ad-hoc?
2.  Could link to the FAA webservice to gather more detailed status info
about an airport (delays, closures, weather etc)

ABOVE BEYOND
1.  The sort operation is flexable enough to allow for sorting on other
properties if sorting/selection of city was to be added.

--- a/Map.css
+++ b/Map.css
@@ -1,9 +1,13 @@
 #airport-settings {
-    width: calc(100% - 8px);
+    display: none;
+    position: absolute;
+    z-index: 99;
+    width: 700px;
     border: 2px solid black;
     height: 128px;
     padding: 4px;
-    margin: 10px 14px 10px 0px;
+    margin: 0px 14px 10px 0px;
+    background-color:white;
 }
 
 #airport-settings #setting-name {
@@ -23,13 +27,19 @@
     margin-left: 14px;
 }
 
+#settings-instructions
+{
+    text-align:right;
+    color: cornflowerblue;
+}
+
 #airport-map{
     width: 800px;
     height: 600px;
 }
 
 #airport-data {
-    margin: 12px;
+    margin: 0px;
 }
 
 #exercise-toggle {
@@ -41,4 +51,13 @@
     vertical-align: text-bottom;
     font-size: 32px;
     font-weight: bold;
+}
+
+.ui-icon{
+    zoom:1.4;
+}
+
+#airport-controls-find{
+    display:flex;
+    flex-flow:row;
 }
