--- a/Map.css
+++ b/Map.css
@@ -47,3 +47,14 @@
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
 }
+
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -10px;
+}
+
+.footer, .push {
+    height: 10px;
+}
