bootstrapped project with css and ux improvements

--- a/Map.css
+++ b/Map.css
@@ -1,10 +1,24 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    margin-left: 20px;
+}
+
 #airport-settings {
     width: 100%;
-    border: 2px solid black;
     height: 150px;
     padding: 4px;
     margin: 10px 14px 10px 0px;
+    float: right;
 }
+
+/*.even {
+    background-color: #f5f5dc;
+}
+
+.odd {
+    background-color: #d7d7d7;
+}*/
 
 #airport-settings #setting-value {
     margin-left: 50px;
@@ -12,12 +26,18 @@
 }
 
 #airport-map {
-    width: 800px;
-    height: 600px;
+    width: 600px;
+    height: 450px;
+    margin-top: 12px;
+
 }
 
 #airport-data {
-    margin: 12px;
+    text-align: center;
+    margin-bottom: 12px;
+    margin-left: -12px;
+    padding-top: -10px;
+    background-color: #eee;
 }
 
 #exercise-toggle {
@@ -36,5 +56,29 @@ table {
 }
 
 #ux {
+    background-color: #eee;
+    margin-left: -20px;
+    padding-left: 20px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+
+}
+
+.jumbotron {
     font-weight: bold;
+    margin-left: -20px;
+    padding: 20px;
+}
+
+h1 {
+    font-weight: bold;
+}
+
+.carastyle {
+    background-color: #eee;
+    margin-bottom: 0px;
+    margin-left: -20px;
+    padding-left: 20px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
