--- a/css/Map.css
+++ b/css/Map.css
@@ -3,6 +3,15 @@ html, body {
     width: 100%;
 }
 
+
+.navbar {
+    min-height: 100px;
+}
+
+.navbar>.container .navbar-brand {
+    margin-left: 0px;
+}
+
 #airport-map {
     height: 100%;
     width: 100%;
