--- a/Map.css
+++ b/Map.css
@@ -42,3 +42,16 @@
     font-size: 32px;
     font-weight: bold;
 }
+ #mark-panel {
+        
+        top: 10px;
+        left: 25%;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+        text-align: center;
+        font-family: 'Roboto','sans-serif';
+        line-height: 30px;
+        padding-left: 10px;
+      }
