--- a/Map.css
+++ b/Map.css
@@ -1,4 +1,5 @@
-#airport-settings {
+#airport-settings
+{
     width: calc(100% - 8px);
     border: 2px solid black;
     height: 128px;
@@ -6,37 +7,44 @@
     margin: 10px 14px 10px 0px;
 }
 
-#airport-settings #setting-name {
+#airport-settings #setting-name
+{
     width: 128px;
     float: left;
     border-right: 1px solid black;
 }
 
-#airport-settings #setting-value {
+#airport-settings #setting-value
+{
     width: calc(100% - 128px);
     margin-left: 128px;
     min-widtH: 240px;
     text-align: left;
 }
 
-#airport-settings #setting-value div {
+#airport-settings #setting-value div
+{
     margin-left: 14px;
 }
 
-#airport-map{
+#airport-map
+{
     width: 800px;
     height: 600px;
 }
 
-#airport-data {
+#airport-data
+{
     margin: 12px;
 }
 
-#exercise-toggle {
+#exercise-toggle
+{
     cursor: pointer;
 }
 
-#instruction-toggle {
+#instruction-toggle
+{
     line-height: 44px;
     vertical-align: text-bottom;
     font-size: 32px;
