--- a/Map.css
+++ b/Map.css
@@ -1,12 +1,11 @@
 #airport-settings {
     width: calc(100% - 8px);
-    border: 2px solid black;
     height: 128px;
     padding: 4px;
     margin: 10px 14px 10px 0px;
 }
 
-#airport-settings #setting-name {
+#airport-settings #setting-labels {
     width: 128px;
     float: left;
     border-right: 1px solid black;
@@ -41,4 +40,20 @@
     vertical-align: text-bottom;
     font-size: 32px;
     font-weight: bold;
+}
+
+#notice {
+    font-size: 9px;
+}
+
+#center-control {
+    margin: 12px;
+    padding: 6px;
+    background-color: white;
+    border-radius: 2px;
+    box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
+}
+
+body {
+    margin: 10px;
 }
