--- a/Map.css
+++ b/Map.css
@@ -1,6 +1,4 @@
 #airport-settings {
-    width: calc(100% - 8px);
-    border: 2px solid black;
     height: 128px;
     padding: 4px;
     margin: 10px 14px 10px 0px;
@@ -15,7 +13,7 @@
 #airport-settings #setting-value {
     width: calc(100% - 128px);
     margin-left: 128px;
-    min-widtH: 240px;
+    min-width: 240px;
     text-align: left;
 }
 
@@ -24,21 +22,98 @@
 }
 
 #airport-map{
-    width: 800px;
-    height: 600px;
+    margin-top: 7vh;
+    width:100%;
+    height: 90vh;
 }
 
 #airport-data {
     margin: 12px;
+    position: absolute;
+    top: 7vh;
+    left: 0px;
+    background-color: whitesmoke;
+    box-shadow: 0 0 15px #888888;
+    border-radius: 3px;
+    padding: 10px;
 }
 
-#exercise-toggle {
-    cursor: pointer;
+body {
+    margin:0;
+    font-family: 'Open Sans', sans-serif;
+    color: #292929;
 }
 
-#instruction-toggle {
-    line-height: 44px;
-    vertical-align: text-bottom;
-    font-size: 32px;
-    font-weight: bold;
+main {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+}
+
+details {
+    position: absolute;
+    top: 5px;
+    z-index: 100;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+dialog {
+    position:absolute;
+    top:10vh;
+    display: inline-block;
+    border: none;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.title {
+    font-size: 16pt;
+    font-weight: 300;
+    padding-left: 25px;
+}
+
+header {
+    top: 0;
+    position: absolute;
+    height: 7vh;
+    width: 100%;
+    box-shadow: 0 0 15px #888888;
+    z-index: 100;
+}
+
+footer {
+    height: 3vh;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    box-shadow: 0 0 15px #888888;
+}
+
+.theme-color {
+    background-color: #084c95;
+    color: whitesmoke;
+}
+
+button {
+    background-color: gray;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    margin: 10px;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 400;
+    box-shadow: 0 0 15px #888888;
+    border-radius: 3px;
+}
+
+select {
+    font-size: 16pt;
+    line-height: 16pt;
 }
