--- a/Map.css
+++ b/Map.css
@@ -1,44 +1,16 @@
-#airport-settings {
-    width: calc(100% - 8px);
-    border: 2px solid black;
-    height: 128px;
-    padding: 4px;
-    margin: 10px 14px 10px 0px;
-}
-
-#airport-settings #setting-name {
-    width: 128px;
-    float: left;
-    border-right: 1px solid black;
-}
-
-#airport-settings #setting-value {
-    width: calc(100% - 128px);
-    margin-left: 128px;
-    min-widtH: 240px;
-    text-align: left;
-}
-
-#airport-settings #setting-value div {
-    margin-left: 14px;
-}
 
 #airport-map{
-    width: 800px;
-    height: 600px;
+    margin-top: 2%;
+    width: 93%;
+    height: 93%;
+    min-height: 512px;
+    min-width: 512px;
 }
 
-#airport-data {
-    margin: 12px;
+div.marked-airport:hover {
+    background-color:#f5f5f5;
+    text-decoration: underline;
+    cursor: pointer; 
+    cursor: hand;    
 }
 
-#exercise-toggle {
-    cursor: pointer;
-}
-
-#instruction-toggle {
-    line-height: 44px;
-    vertical-align: text-bottom;
-    font-size: 32px;
-    font-weight: bold;
-}
