--- a/Map.css
+++ b/Map.css
@@ -1,44 +1,58 @@
+body {
+    background: #565656;
+    color: white;
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
+    font-size: 2vw;
+    margin: 20px auto;
+    width: 95%;
+}
+h1 {
+    margin: 5px 0;
+}
 #airport-settings {
-    width: calc(100% - 8px);
     border: 2px solid black;
     height: 128px;
+    margin: 10px 14px 10px 0;
     padding: 4px;
-    margin: 10px 14px 10px 0px;
+    width: calc(100% - 8px);
 }
-
 #airport-settings #setting-name {
-    width: 128px;
-    float: left;
     border-right: 1px solid black;
+    float: left;
+    width: 128px;
 }
-
 #airport-settings #setting-value {
-    width: calc(100% - 128px);
     margin-left: 128px;
     min-widtH: 240px;
     text-align: left;
+    width: calc(100% - 128px);
 }
-
 #airport-settings #setting-value div {
     margin-left: 14px;
 }
-
-#airport-map{
-    width: 800px;
+#airport-map {
     height: 600px;
+    width: 800px;
 }
-
 #airport-data {
     margin: 12px;
 }
-
 #exercise-toggle {
     cursor: pointer;
+    /*border: 2px solid white;*/
+    display: inline-block;
+    font-size: 1.5em;
+    margin: 5px;
+    padding: 0 10px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    vertical-align: middle;
 }
-
 #instruction-toggle {
-    line-height: 44px;
-    vertical-align: text-bottom;
     font-size: 32px;
     font-weight: bold;
+    line-height: 44px;
+    vertical-align: text-bottom;
 }
