--- a/Map.css
+++ b/Map.css
@@ -1,3 +1,6 @@
+/*----------------------------------------*/
+/* General Tag Styles */
+/*----------------------------------------*/
 body {
     background: #565656;
     color: white;
@@ -9,11 +12,52 @@ body {
 h1 {
     margin: 5px 0;
 }
-#airport-settings {
-    border: 4px solid black;
+
+/*----------------------------------------*/
+/* Table Structure */
+/*----------------------------------------*/
+.table {
+    display: table;
+    margin: 50px auto;
+}
+.row {
+    display: table-row;
+}
+.cell {
+    display: table-cell;
+    padding: 5px;
+}
+.hcell {
+    display: table-cell;
+    color: #ffcb05;
+    font-weight: bold;
+}
+.cell {
+    transition: background 0.3s, color 0.3s;
+}
+.cell label {
+    margin-right: 10px;
+}
+.cell input, .cell select {
+    border-radius: 5px;
+    width: 200px;
+}
+#airport-data {
+    margin: 12px;
+    /*position: absolute;
+    top: 100px;
+    left: 800px;*/
+}
+#airport-data > div {
     margin: auto;
     padding: 4px;
     width: 80%;
+}
+#airport-data #airport-controls select {
+    font-size: 20px;
+}
+#airport-settings {
+    border: 4px solid black;
 }
 #airport-settings #setting-value {
     margin-left: 128px;
@@ -26,13 +70,8 @@ h1 {
 }
 #airport-map {
     height: 600px;
+    margin: auto;
     width: 800px;
-}
-#airport-data {
-    margin: 12px;
-    position: absolute;
-    top: 100px;
-    left: 800px;
 }
 #exercise-toggle {
     cursor: pointer;
@@ -52,4 +91,25 @@ h1 {
     font-weight: bold;
     line-height: 44px;
     vertical-align: text-bottom;
+}
+
+.popup #buttonContainer {
+    background: #DDDDDC;
+    border: 3px solid white;
+    color: #00274c;
+    font-size: 20px;
+    left: 0;
+    margin: auto;
+    min-width: 300px;
+    max-width: 500px;
+    padding: 20px;
+    position: fixed;
+    right: 0;
+    width: 50%;
+    z-index: 4;
+}
+.popup input[type=button] {
+    font-size: 16px;
+    margin: 0 20px;
+    width: 100px;
 }
