Fixed bug where initMap was getting called before it existed.

--- a/css/Map.css
+++ b/css/Map.css
@@ -76,6 +76,7 @@ h1 {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     height: 600px;
+    height: 480px;
     margin: auto;
     min-width: 500px;
     width: 800px;
