--- a/css/Map.css
+++ b/css/Map.css
@@ -5,10 +5,6 @@ html {
     overflow-y: scroll;
 }
 body {
-    /*background: #565656;*/
-    /*background: #AAAAAA;*/
-    /*background: whitesmoke;*/
-    /*background: #90C3C8;*/
     background: #1F5673;
     color: white;
     font-family: 'Fira Sans Extra Condensed', sans-serif;
@@ -20,7 +16,6 @@ h1 {
     margin: 5px 0;
 }
 
-/*----------------------------------------*/
 /* Table Structure */
 /*----------------------------------------*/
 .table {
@@ -42,17 +37,16 @@ h1 {
     transition: background 0.3s, color 0.3s;
 }
 .cell.field {
-    font-size: 0.8em;
-    padding: 10px 25px 0 15px;
+    color: #1F5673;
+    font-size: 1.1em;
     text-align: right;
 }
 .cell.value {
-    color: whitesmoke;
+    color: #1F5673;
+    font-size: 1.3em;
 }
+/*----------------------------------------*/
 
-/*----------------------------------------*/
-/* Buttons */
-/*----------------------------------------*/
 .button {
     background: whitesmoke;
     border: 2px solid #463730;
@@ -68,63 +62,6 @@ h1 {
     -ms-user-select: none;
     user-select: none;
     vertical-align: middle;
-}
-
-#airport-map {
-    /*border: 6px outset black;*/
-    border: 3px solid #463730;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    height: 600px;
-    height: 480px;
-    margin: auto;
-    min-width: 500px;
-    width: 800px;
-}
-#airport-data {
-    /*background: #BAEEFF;*/
-    background: #1F5673;
-    background: #759FBC;
-    /*border: 4px solid #000;*/
-    border: 3px solid #463730;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    color: #463730;
-
-    margin: -2px auto;
-    min-width: 500px;
-    width: 800px;
-    /*position: absolute;
-    top: 100px;
-    left: 800px;*/
-}
-#airport-data > div {
-    padding: 10px 25px 5px 25px;
-}
-#airport-data #airport-header {
-    color: whitesmoke;
-    display: inline-block;
-    font-size: 1.3em;
-    /*width: 200px;*/
-}
-#airport-data #airport-controls {
-    float: right;
-}
-#airport-data #airport-controls select {
-    border: 2px solid #463730;
-    font-size: 0.6em;
-}
-#airport-data #airport-settings {
-    padding: 0 25px 10px 25px;
-}
-#airport-settings #setting-value {
-    margin-left: 128px;
-    min-widtH: 240px;
-    text-align: left;
-    width: calc(100% - 128px);
-}
-#airport-settings #setting-value div {
-    margin-left: 14px;
 }
 #instruction-toggle {
     cursor: pointer;
@@ -144,33 +81,77 @@ h1 {
     user-select: none;
     vertical-align: middle;
 }
-.popup #buttonContainer {
-    background: #DDDDDC;
-    border: 3px solid white;
-    color: #00274c;
-    font-size: 20px;
-    left: 0;
-    margin: auto;
-    min-width: 300px;
-    max-width: 500px;
-    padding: 20px;
-    position: fixed;
-    right: 0;
-    width: 50%;
-    z-index: 4;
+#exercise-instructions p {
+    margin: 10px;
 }
-.popup input[type=button] {
-    font-size: 16px;
-    margin: 0 20px;
-    width: 100px;
+#exercise-instructions ul {
+    list-style: square;
+    margin: 10px 50px;
+}
+#exercise-instructions {
+    margin: 20px;
+}
+#airport-map {
+    /*border: 6px outset black;*/
+    border: 3px solid #463730;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    height: 600px;
+    margin: auto;
+    min-width: 500px;
+    width: 800px;
+}
+#airport-data {
+    background: #759FBC;
+    border: 3px solid #463730;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: #463730;
+
+    margin: -2px auto;
+    min-width: 500px;
+    width: 800px;
+}
+#airport-data > div {
+    padding: 10px 25px 5px 25px;
+}
+#airport-data #airport-header {
+    color: whitesmoke;
+    display: inline-block;
+    font-size: 1.3em;
+}
+#airport-data #airport-controls {
+    float: right;
+}
+#airport-data #airport-controls select {
+    border: 2px solid #463730;
+    font-size: 0.6em;
+}
+#airport-settings {
+    display: none;
+}
+#setting-value {
+    margin-left: 128px;
+    min-widtH: 240px;
+    text-align: left;
+    width: calc(100% - 128px);
+}
+#setting-value div {
+    margin-left: 14px;
 }
 @media screen and (max-width: 860px) {
     #airport-map {
         height: 500px;
         width: 90%;
     }
+    #airport-header {
+        font-size: 4vw;
+    }
     #airport-data {
         width: 90%;
+    }
+    #airport-data #airport-controls select {
+        font-size: 1em;
     }
 }
 @media screen and (min-width: 1390px) {
