--- a/Map.css
+++ b/Map.css
@@ -42,3 +42,17 @@
     font-size: 32px;
     font-weight: bold;
 }
+
+#marker-control-panel {
+    /*position: absolute;*/
+    top: 10px;
+    left: 25%;
+    z-index: 5;
+    background-color: #fff;
+    padding: 5px;
+    border: 1px solid #999;
+    text-align: center;
+    font-family: 'Roboto','sans-serif';
+    line-height: 30px;
+    padding-left: 10px;
+}
