Fix show-after-delete bug
only extend the map bounds if there are markers to show. Move around the hide-show-delete box so I can see it all at once with the dropdown. set a starting position of A**2. one more foreach refactor.

--- a/Map.css
+++ b/Map.css
@@ -45,6 +45,9 @@
 
 #marker-control-panel {
     /*position: absolute;*/
+    width: 800px;
+    margin: 12px;
+
     top: 10px;
     left: 25%;
     z-index: 5;
